# skija

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  NOTICE  README.md  TODO.md  pom.native.xml  pom.shared.xml  pom.xml  settings.xml
.github/workflows/: build.yml
ci/: deploy_linux.sh  deploy_macos.sh  deploy_macos_arm64.sh  deploy_macos_x64.sh  deploy_shared.sh  deploy_windows.sh  revision.sh  settings.xml
cmake/: FindSkia.cmake
docs/: Conventions.md  Getting Started.md
examples/bitmap/: README.md
examples/clojure/: README.md  deps.edn
examples/clojure-snake/: README.md  deps.edn
examples/jogl/: README.md  build.gradle  settings.gradle
examples/jwm/: README.md
examples/kwinit/: Cargo.toml  README.md
examples/kwinit/script/: run.clj  run.py
examples/kwinit/src_java/: ExternalAPI.java  KWInitException.java  Main.java
examples/kwinit/src_rust/: angle.rs  api.rs  app_menu.rs  egl.rs  kwevents.rs  lib.rs  windowed_context.rs
examples/kwinit/src_rust/platform/: linux.rs  macos.rs  mod.rs  windows.rs
examples/lwjgl/: README.md  pom.xml
examples/metal/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  rules.ninja
examples/scenes/: README.md
examples/swt/: README.md
extras/ubuntu-14.04/: Dockerfile
native/: CMakeLists.txt  pom.xml
native/cmake/: FindSkia.cmake
native/script/: build.clj  build.cmd  build.py  build.sh  clean.clj  clean.cmd  clean.py  clean.sh  deploy.py  fetch_skia.clj  fetch_skia.sh  install.cmd  install.sh  package.py  test.py
native/src/: Bitmap.cc  BreakIterator.cc  Canvas.cc  Codec.cc  Context.cc  Data.cc  DirectContext.cc  Drawable.cc  Font.cc  FontMgr.cc  Image.cc  ManagedString.cc  Path.cc  PathEffect.cc  Picture.cc  PixelRef.cc  Surface.cc  TextBlob.cc  TextLine.cc  TextLine.hh  Typeface.cc  interop.cc  interop.hh
native/src/impl/: Library.cc
native/src/main/java/: module-info.java
native/src/main/java/org/jetbrains/skija/platform/: LibraryLinux.java  LibraryMacosArm64.java  LibraryMacosX64.java  LibraryWindows.java
native/src/main/resources/: skija.version
native/src/paragraph/: FontCollection.cc  Paragraph.cc  ParagraphBuilder.cc  ParagraphCache.cc  ParagraphStyle.cc  TextStyle.cc  interop.hh
native/src/shaper/: FontMgrRunIterator.cc  FontRunIterator.cc  FontRunIterator.hh  HbIcuScriptRunIterator.cc  IcuBidiRunIterator.cc  Shaper.cc  TextLineRunHandler.hh  interop.cc  interop.hh
native/src/skottie/: Animation.cc  AnimationBuilder.cc  Logger.cc  interop.cc
native/src/sksg/: InvalidationController.cc
native/src/svg/: DOM.cc  SVGDOM.cc  SVGNode.cc  SVGSVG.cc  interop.cc  interop.hh
native/src/test/java/org/jetbrains/skija/platform/: BitmapTest.java  ColorTest.java  DataTest.java  FontMgrTest.java  ImageTest.java  PaintTest.java  PathMeasureTest.java  PathTest.java  SurfaceTest.java  TestSuite.java  TestTest.java  TextLineTest.java  TypefaceTest.java
native/src/test/java/org/jetbrains/skija/platform/paragraph/: FontCollectionTest.java  TextStyleTest.java
native/src/test/java/org/jetbrains/skija/platform/svg/: SVGCanvasTest.java
native/src/test/java/org/jetbrains/skija/platform/test/: Executable.java  TestRunner.java
platform/: CMakeLists.txt
platform/cc/: BackendRenderTarget.cc  Bitmap.cc  Codec.cc  ColorFilter.cc  ColorType.cc  Data.cc  DirectContext.cc  FontStyleSet.cc  Image.cc  ImageFilter.cc  ManagedString.cc  OutputWStream.cc  Paint.cc  Picture.cc  Pixmap.cc  RuntimeEffect.cc  Shader.cc  Surface.cc  TextBlob.cc  TextBlobBuilder.cc  TextLine.cc  TextLine.hh  U16String.cc  interop.cc  interop.hh
platform/cc/impl/: BufferUtil.cc  Library.cc
platform/cc/paragraph/: Paragraph.cc  ParagraphCache.cc  TextStyle.cc  interop.cc
platform/cc/resources/: CachingResourceProvider.cc  DataURIResourceProviderProxy.cc  FileResourceProvider.cc
platform/cc/shaper/: FontMgrRunIterator.cc  FontRunIterator.cc  FontRunIterator.hh  Shaper.cc  TextBlobBuilderRunHandler.cc  interop.cc  interop.hh
platform/cc/skottie/: AnimationBuilder.cc  interop.hh
platform/cc/svg/: SVGCanvas.cc  SVGDOM.cc
platform/cmake/: FindSkia.cmake
platform/java-linux/: LibraryFinder.java  module-info.java
platform/java-macos-arm64/: LibraryFinder.java  module-info.java
platform/java-macos-x64/: LibraryFinder.java  module-info.java
platform/java-windows/: LibraryFinder.java  module-info.java
publish/: build.gradle.kts  gradle.properties
script/: build.py  build.sh  build_incremental.sh  build_shared.py  build_skia_linux.sh  build_skia_macos.sh  build_skia_windows.sh  ci_deploy_linux.sh  ci_deploy_macos-x64.sh  ci_deploy_macos.sh  ci_deploy_shared.sh  ci_deploy_windows.sh  ci_prepare_linux.sh  clean.cmd  clean.py  clean.sh  common.py  deploy.sh  deploy_platform.py  deploy_shared.py  install.cmd  install.sh  install_docker.sh  javadoc.py  javadoc.sh  native.cmd  native.sh  revision.py  revision.sh  run.sh  skia_linux.sh  test.py  util.clj
shared/: pom.xml
shared/java/: AnimationDisposalMethod.java  AnimationDisposalMode.java  AnimationFrameInfo.java  BackendRenderTarget.java  Bitmap.java  BlendMode.java  BreakIterator.java  Canvas.java  ClipMode.java  Codec.java  Color.java  ColorAlphaType.java  ColorChannel.java  ColorFilter.java  ColorInfo.java  ColorMatrix.java  ColorSpace.java  ColorType.java  ContentChangeMode.java  CubicResampler.java  Data.java  DirectContext.java  Drawable.java  EncodedImageFormat.java  EncodedOrigin.java  FilterBlurMode.java  FilterMipmap.java  FilterMode.java  FilterQuality.java  FilterTileMode.java  Font.java  FontEdging.java  FontHinting.java  FontMgr.java  FontSlant.java  FontStyle.java  FontStyleSet.java  FontWeight.java  FontWidth.java  FourByteTag.java  (+46 more)
shared/java9/: module-info.java
shared/script/: build.py  clean.py  clean.sh  compile.sh  deploy.py  install.cmd  install.sh  javadoc.py  javadoc.sh  test.py
tests/java/: BitmapTest.java  ColorTest.java  DataTest.java  FontMgrTest.java  ImageTest.java  PaintTest.java  PathMeasureTest.java  PathTest.java  SurfaceTest.java  TestSuite.java  TestTest.java  (+2 more)
(+614 files in other folders)
