[package]
name = "kwinit"
version = "0.1.0"
authors = ["Andrey Zaytsev <andrey.zaytsev@jetbrains.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
#rpath = false
#lto = true
#debug-assertions = false
#codegen-units = 1
#panic = 'abort'
#incremental = false
#overflow-checks = false

[dependencies]
log = "0.4"
env_logger = "0.7"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
gleam = "0.11"
glutin = {version = "0.25", features = ["serde"] }
backtrace = "0.3"
clipboard = "0.5.0"
lazy_static = "1.3.0"
webbrowser = "0.5.2"
notify-rust = "4"
jni = "0.17"
image = "0.22.1"

[target.'cfg(target_os = "windows")'.dependencies]
mozangle = {version = "0.3.1", features = ["egl"]}
winapi = "0.3.9"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.20.0"

[target.'cfg(target_os = "macos")'.dependencies.objc]
version = "0.2"
features = ["exception"]

[patch.crates-io]
winit = { git = "https://github.com/JetBrains/winit", rev = "50b2abac1f885bfbca122a1cc36aa3a31d356fc8" }

[lib]
crate-type = ["cdylib"]
path = "src_rust/lib.rs"
